[tool.poetry]
name = "onesecondtrader"
version = "0.1.0"
description = ""
authors = ["Nils P. Kujath <63961429+NilsKujath@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.10" # <3.14 required by databento
pandas = "^2.2.3"
databento = "^0.47.0"
python-dotenv = "^1.0.1"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
ipykernel = "^6.29.5"
mkdocs-glightbox = "^0.4.0"
mkdocs-material = "^9.5.50"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
